flux/block-storage.yaml
apiVersion: v1
kind: Service
metadata:
  name: quiet-signal-minio
  namespace: quiet-signal
  labels:
    app: quiet-signal-minio
spec:
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
      name: api
  selector:
    app: quiet-signal-minio
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quiet-signal-minio
  namespace: quiet-signal
  labels:
    app: quiet-signal-minio
spec:
  replicas: 1 #STRICTLY ONE
  selector:
    matchLabels:
      app: quiet-signal-minio
  template:
    metadata:
      labels:
        app: quiet-signal-minio
    spec:
      containers:
        - name: minio
          image: minio/minio:latest
          args:
            - server
            - /data
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: minio-data
              mountPath: /data
          readinessProbe:
            httpGet:
              path: /minio/health/ready
              port: 9000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /minio/health/live
              port: 9000
            initialDelaySeconds: 20
            periodSeconds: 20
      volumes:
        - name: minio-data
          persistentVolumeClaim:
            claimName: quiet-signal-minio-pvc
---

apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: minio-route
  namespace: quiet-signal
spec:
  parentRefs:
  - name: noxbound-gateway
    namespace: noxbound-edge
    sectionName: quiet-signal-2-tcp
  rules:
  - backendRefs:
    - name: quiet-signal-minio
      port: 9000
